<resources>
    <string name="app_name">Reserva Locales FIA</string>
    <string name="title_activity_local_menu">LocalMenuActivity</string>
    <string name="title_activity_Encargado_menu">EncargadoMenuActivity</string>
    <string name="title_activity_Detalle_grupo_reserva_menu">DetalleReservaLocalMenuActivity</string>
    <string name="title_activity_asignatura_menu">AsignaturaMenuActivity</string>
    <string name="title_activity_carga_academica_menu">CargaAcademicaMenuActivity</string>
    <string name="title_activity_horario_menu">HorarioMenuActivity</string>
    <string name="title_activity_local_insertar">LocalInsertarActivity</string>
    <string name="title_activity_local_eliminar">LocalEliminarActivity</string>
    <string name="title_activity_local_actualizar">LocalActualizarActivity</string>
    <string name="title_activity_local_consultar">LocalConsultarActivity</string>
    <string name="title_activity_encargado_insertar">EncargadoInsertarActivity</string>
    <string name="title_activity_encargado_eliminar">EncargadoEliminarActivity</string>
    <string name="title_activity_encargado_actualizar">EncargadoActualizarActivity</string>
    <string name="title_activity_encargado_consultar">EncargadoConsultarActivity</string>
    <string name="title_activity_Detalle_grupo_reserva_insertar">DetalleGrupoReservaInsertarActivity</string>
    <string name="title_activity_Detalle_grupo_reserva_eliminar">DetalleGrupoREservaEliminarActivity</string>
    <string name="title_activity_Detalle_grupo_reserva_actualizar">DetalleGrupoREservaActualizarActivity</string>
    <string name="title_activity_Detalle_grupo_reserva_consultar">DetalleGrupoREservaConsultarActivity</string>
    <string name="title_activity_asignatura_insertar">AsignaturaInsertarActivity</string>
    <string name="title_activity_asignatura_eliminar">AsignaturaEliminarActivity</string>
    <string name="title_activity_asignatura_actualizar">AsignaturaActualizarActivity</string>
    <string name="title_activity_asignatura_consultar">AsignaturaConsultarActivity</string>
    <string name="title_activity_carga_academica_insertar">CargaAcademicaInsertarActivity</string>
    <string name="title_activity_carga_academica_eliminar">CargaAcademicaEliminarActivity</string>
    <string name="title_activity_carga_academica_actualizar">CargaAcademicaActualizarActivity</string>
    <string name="title_activity_carga_academica_consultar">CargaAcademicaConsultarActivity</string>
    <string name="title_activity_horario_insertar">HorarioInsertarActivity</string>
    <string name="title_activity_horario_eliminar">HorarioEliminarActivity</string>
    <string name="title_activity_horario_actualizar">HorarioActualizarActivity</string>
    <string name="title_activity_horario_consultar">HorarioConsultarActivity</string>
     <string name="title_activity_Voz">VozActivity</string>
    <string name="btnTalk">Hable</string>

    <string name="title_activity_ciclo_menu">CicloMenuActivity</string>
    <string name="title_activity_grupo_menu">GrupoMenuActivity</string>
    <string name="title_activity_dias_no_habiles_menu">DiasNoHabilesMenuActivity</string>
    <string name="title_activity_ciclo_insertar">CicloInsertarActivity</string>
    <string name="title_activity_ciclo_eliminar">CicloEliminarActivity</string>
    <string name="title_activity_ciclo_actualizar">CicloActualizarActivity</string>
    <string name="title_activity_ciclo_consultar">CicloConsultarActivity</string>
    <string name="title_activity_grupo_insertar">GrupoInsertarActivity</string>
    <string name="title_activity_grupo_eliminar">GrupoEliminarActivity</string>
    <string name="title_activity_grupo_actualizar">GrupoActualizarActivity</string>
    <string name="title_activity_grupo_consultar">GrupoConsultarActivity</string>
    <string name="title_activity_dias_no_habiles_insertar">DiasNoHabilesInsertarActivity</string>
    <string name="title_activity_dias_no_habiles_eliminar">DiasNoHabilesEliminarActivity</string>
    <string name="title_activity_dias_no_habiles_actualizar">DiasNoHabilesActualizarActivity</string>
    <string name="title_activity_dias_no_habiles_consultar">diasNoHabilesConsultarActivity</string>
    <string name="ciclo_menu">Función a Ejecutar Ciclo</string>
    <string name="grupo_menu">Función a Ejecutar grupo</string>
    <string name="dias_no_habiles_menu">Función a Ejecutar Dias No Habiles</string>
    <string name="local_menu">Función a Ejecutar local</string>
    <string name="encargado_menu">Función a Ejecutar Encargado</string>
    <string name="Detalle_grupo_reserva_menu">Función a Ejecutar detalle </string>
    <string name="CodigoLocal">CodigoLocal</string>
    <string name="IdEncargadoLocal">IdEncargadoLocal</string>
    <string name="IdTipoLocal">IdTipoLocal</string>
    <string name="UbicacionLocal">UbicacionLocal</string>
    <string name="CapacidadLocal">CapacidadLocal</string>

    <string name="idEncargadoLocal">idEncargadoLocal</string>
    <string name="NombreENcargadoLocal">NombreENcargadoLocal</string>
    <string name="ApeEncargadoLocal">ApeEncargadoLocal</string>
    <string name="IdHorario">codigo_horario</string>
    <string name="IdRolDocente">Codigo Docente</string>
    <string name="codigoAsignaturas">codigo Asignatura</string>
    <string name="codigoCiclo">codigo Ciclo</string>
    <string name="carnetDocentes">carnet Docente</string>
    <string name="IdGrupo">codigo Grupo</string>
    <string name="codigoLocales">codigo local</string>
    <string name="CodigoCiclo">Codigo Ciclo:</string>
    <string name="fechaInicio">Fecha de Inicio</string>
    <string name="fechaFin">Fecha Fin</string>
    <string name="id_rol_docente">ID Rol Docente</string>
    <string name="codigo_asignatura">Codigo Asignatura</string>
    <string name="carnet_docente">Carnte Docente</string>
    <string name="id_grupo">ID Grupo</string>
    <string name="num_max_estudiantes">Numero Maximo de Estudiantes</string>
    <string name="asignatura_menu">Función a Ejecutar Asignatura</string>
    <string name="carga_academica_menu">Función a Ejecutar Carga Academica</string>
    <string name="horario_menu">Función a Ejecutar Horario</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="limpiar">Limpiar</string>
    <string name="opciones">Opciones:</string>
    <string name="codigoAsignatura">Codigo Asignatura</string>
    <string name="nomAsignatura">Nombre Asignatura</string>
    <string name="codigoLocal">Codigo Local</string>
    <string name="codigoEscuela">Codigo Escuela</string>
    <string name="idPriodad">Prioridad</string>
    <string name="id_dias_no_habiles">ID Dias No Habiles:</string>
    <string name="nom_dias_no_habiles">Nombre de Dias No Habiles</string>
    <string name="fecha_desde">Fecha de Inicio de dias no habiles</string>
    <string name="fecha_hasta">Fecha de Fin de dias no habiles</string>
    <string name="idRolDocente">Rol Docente</string>
    <string name="carnetDocente">Carnet Docente</string>
    <string name="idHorario">Horario</string>
    <string name="idDia">Dia</string>
    <string name="horaInicio">Hora Inicio</string>
    <string name="horaFin">Hora Finalizacion</string>
    <string name="idTipoEvento" />
    <string name="nombreEvento" />
    <string name="servicioWeb1">Ingresar Reserva Local</string>
    <string name="servicioWeb2">Consultar Carga Academica x Ciclo</string>
    <string name="servicioWeb3">Servicio Web 3</string>
    <string name="servicioWeb4">Servicio Web 4</string>
    <string name="servicioWeb5">Ingresar Día</string>
    <string name="servicioWeb6">Servicio Web 6</string>
    <string name="servicioWeb7">Ingresar Ciclo</string>
    <string name="servicioWeb8">Servicio Web 8</string>
    <string name="servicio_PHPexterno">Servicio PHP Externo</string>
    <string name="servicio_PHPlocal">Servicio PHP Local</string>
    <string name="servicio_PublicoUES">EISI Publico</string>

    <string name="indicacion_ciclo">Cual ciclo desea consultar la carga academica?</string>
    <string name="formato_ciclo">c-aaaa</string>
    <string name="guardar">Guardar</string>
    <string name="iddia">ID Dia</string>
    <string name="nomdia">Nombre Dia</string>
    <string name="formato_dia">D / D-D</string>
    <string name="ingresar_dia">Ingresar Dia</string>

    <string name="text_login">Inicio de Sesión</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_text_login">Ingresar</string>
    <string name="msg_error_login">El usuario y/o la clave del mismo son invalidos</string>

    <string name="ges_u">Gestión Usuario</string>
    <string name="ges_e">Gestión Escuela</string>
    <string name="ges_tl">Gestión Tipo Local</string>
    <string name="ges_d">Gestión Docente</string>
    <string name="ges_rol">Gestión Rol Docente</string>
    <string name="ges_a">Gestión Asignatura</string>
    <string name="ges_c">Gestión Ciclo</string>
    <string name="ges_dian">Gestión Dias no Habiles</string>
    <string name="ges_te">Gestión Tipo Evento</string>
    <string name="ges_l">Gestión Local</string>
    <string name="ges_s">Servicios WEB</string>

    <string name="ges_re">Gestión Reserva Evento</string>
    <string name="ges_dr">Gestión Detalle Reserva</string>
    <string name="ges_g">Gestión Grupo</string>
    <string name="ges_dg">Gestión Detalle Grupo</string>
    <string name="ges_h">Gestión Horario</string>
    <string name="ges_ca">Gestión Carga Academica</string>
    <string name="channel_name">Channel</string>
    <string name="channel_description">Este es un canal</string>
    <string name="title_activity_maps">Map</string>

</resources>
