<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp"
            android:background="@drawable/border">

            <!-- Head -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:src="@drawable/usuario"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:gravity="center"
                android:text="@string/text_login"
                android:textSize="26dp"
                android:textStyle="bold"
                android:fontFamily="cursive"
                android:textColor="@color/colorPrimaryDark"/>

            <!-- Username Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtUsernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/hint_username"
                    android:maxLength="20"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtPassText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="20"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_error_login"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_error_login"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textStyle="bold|italic"
                    android:textColor="#aa0101"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:onClick="iniciarSesion"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="#FFFFFF"
                    android:text="@string/btn_text_login" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:onClick="registroNuevo"
                android:background="@color/colorPrimaryDark"
                    android:textColor="#FFFFFF"
                    android:text="Registrarse" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>